overflow fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,9 +4,15 @@
   box-sizing: border-box;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
+html {
+  overflow: auto;
+}
+
 html, body {
   width: 100%;
   height: 100%;
+  
 }
 body {
   font-family: Arial, sans-serif;
@@ -48,7 +54,7 @@ section {
 
 #spinner-div {
   background-color: rgba(255,255,255,0.15);
-  position: fixed;
+  position: absolute;
 
   display: flex;
   align-items: center;
